# tl-django-project

./: .env.example  .gitignore  docker-compose.yml  pyproject.toml
app/: settings.py
