[tool.poetry]
name = "customers-server"
version = "0.1.0"
description = ""
authors = ["Luis Zenteno <\"ltzenteno@gmail.com\">"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^4.2.6"
djangorestframework = "^3.14.0"
django-filter = "^23.3"
psycopg = {extras = ["pool", "binary"], version = "^3.1.12"}
django-environ = "^0.11.2"
django-extensions = "^3.2.3"
djangorestframework-jsonapi = "^6.1.0"
inflection = "^0.5.1"
pytz = "^2023.3.post1"
sqlparse = "^0.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
